Fixed overlapping text issue

--- a/cov_app/static/css/styles.css
+++ b/cov_app/static/css/styles.css
@@ -82,6 +82,12 @@ table, th, td {
     width:152px;
 }
 
+@media (min-width:961px)  {
+    .fixedImHeight{
+        height:153px;
+    }
+}
+
 .xsmallFont{
     font-size: x-small;
 }
